<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_shopping_cart"
        android:title="@string/shopping_cart"
        android:icon="@drawable/icon_cart"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/action_main_menu"
        >
        <item
            android:id="@+id/action_profile"
            android:title="@string/text_prof"/>
        <item
            android:id="@+id/action_catalog"
            android:title="@string/text_kat"/>
        <item
            android:id="@+id/action_map"
            android:title="@string/text_map"/>
        <item
            android:id="@+id/action_shopping"
            android:title="@string/shopping_cart"/>
        <item
            android:id="@+id/action_contacts"
            android:title="@string/text_contacts"/>
        <item
            android:id="@+id/sign_out"
            android:title="@string/text_sign_out"
            />
    </group>
</menu>