<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:background="@color/colorBackground"
    android:id="@+id/action_profile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_prof"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:layout_margin="25dp"
        />
    <TextView
        android:id="@+id/tv_prof_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_firstname"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/tv_prof_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_lastname"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/tv_prof_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/tv_prof_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_phone"
        android:layout_margin="15dp"
        />
</LinearLayout>