<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".catalog.medicines.MedicinesActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/iv_medicines"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/med_orgalutran" />
        <TextView
            android:id="@+id/tv_medicines_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextReg"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vnalichii"
            android:textColor="#00ffff"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/price_orgalutran"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_buy1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_buy"
                android:textColor="@color/colorTextReg"
                android:background="@color/colorBtnBlueDark"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_poluchitzakaz"
            android:textColor="@color/colorTextReg"
            android:padding="10dp"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_delivery"
                android:layout_marginEnd="6dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dostavkasegodnya"
                android:gravity="start"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_freedelivery"
                android:gravity="end"
                android:textStyle="bold"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_map_marker"
                android:layout_marginEnd="6dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_samovivoz"
                android:gravity="start"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_free"
                android:gravity="end"
                android:textStyle="bold"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_character"
            android:textColor="@color/colorTextReg"
            android:padding="10dp"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_snow"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/tv_characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_instruction"
            android:textColor="@color/colorTextReg"
            android:padding="10dp"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sostav"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_composition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_pharma"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_tv_pharmacology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_indication"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_indication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_contraindication"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_contraindication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_side_effect"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_side_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mode_of_app"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_mode_of_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_release_form"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_release_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_shelf_life"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:id="@+id/tv_shelf_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
            <!--Выпадающее окно + -
            состав
            фармакологическое действие
            показания
            противопоказания
            побочные действия
            способ применения и дозы
            форма выпуска
            срок годности-->




    </LinearLayout>
</ScrollView>

</LinearLayout>