<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="ru.bvv.pharmplus.MainActivity"
    android:id="@+id/main_activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/iv_prof"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_prof" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif"
            android:onClick="onClickProfile"
            android:text="@string/text_prof"
            android:textColor="@color/colorBlack"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/iv_kat"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_pil" />

        <TextView
            android:id="@+id/tv_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif"
            android:textColor="@color/colorBlack"
            android:onClick="onClickCatalog"
            android:text="@string/text_kat"
            android:textSize="45sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/iv_karta"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_map_marker" />

        <TextView
            android:id="@+id/tv_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif"
            android:textColor="@color/colorBlack"
            android:onClick="onClickMap"
            android:text="@string/text_map"
            android:textSize="45sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_like2" />

        <TextView
            android:id="@+id/tv_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif"
            android:textColor="@color/colorBlack"
            android:onClick="onClickContacts"
            android:text="@string/text_contacts"
            android:textSize="45sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_options"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_margin"
        android:src="@drawable/icon_gear" />

</LinearLayout>
